refactor: split server and web Gradle modules